feat: add poetry support
chore(ci): add --no-root flag to Poetry test step
chore(ci): add --no-root flag to Poetry linting step
chore(deps): bump dev dependencies to latest versions

- pre-commit       3.8.0  → 4.2.0
- pytest-asyncio   0.21.2 → 1.1.0
- pytest-cov       4.1.0  → 6.2.1
- ruff             0.8.6  → 0.12.4
- python-dotenv, mypy, bandit[toml], safety pinned to latest
fix: update links
chore: add packages entry and update CI to use Poetry install
chore(ci): remove invalid packages config and use Poetry install in security workflows
chore(ci): install Poetry via pip for cross-platform support
fix(ci): update pytest run step for Windows PowerShell compatibility
Update pyproject.toml

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -22,29 +22,31 @@ jobs:
       matrix:
         language: ['python']
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v3
-      with:
-        languages: ${{ matrix.language }}
-        queries: +security-and-quality
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.13'
+      - name: Install Poetry via pip
+        run: |
+          python -m pip install --upgrade pip poetry
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e .[dev]
+      - name: Install dependencies (no root)
+        run: |
+          poetry install --no-interaction --with dev --no-root
 
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v3
-      with:
-        category: "/language:${{matrix.language}}"
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: ${{ matrix.language }}
+          queries: +security-and-quality
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+        with:
+          category: "/language:${{matrix.language}}"
 
   security:
     name: Security Scanning
@@ -53,37 +55,40 @@ jobs:
       security-events: write
       contents: read
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.13'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e .[dev]
+      - name: Install Poetry via pip
+        run: |
+          python -m pip install --upgrade pip poetry
 
-    - name: Run Safety check
-      run: |
-        safety check --json --output safety-results.json || true
+      - name: Install dependencies (no root)
+        run: |
+          poetry install --no-interaction --with dev --no-root
 
-    - name: Run Bandit security scan
-      run: |
-        bandit -r src/ -f json -o bandit-results.json || true
+      - name: Run Safety check
+        run: |
+          poetry run safety check --json --output safety-results.json || true
 
-    - name: Run Trivy vulnerability scanner
-      uses: aquasecurity/trivy-action@master
-      with:
-        scan-type: 'fs'
-        scan-ref: '.'
-        format: 'sarif'
-        output: 'trivy-results.sarif'
-        severity: 'CRITICAL,HIGH'
+      - name: Run Bandit security scan
+        run: |
+          poetry run bandit -r src/ -f json -o bandit-results.json || true
 
-    - name: Upload Trivy scan results to GitHub Security tab
-      uses: github/codeql-action/upload-sarif@v3
-      if: always()
-      with:
-        sarif_file: 'trivy-results.sarif'
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          scan-ref: '.'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+          severity: 'CRITICAL,HIGH'
+
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v3
+        if: always()
+        with:
+          sarif_file: 'trivy-results.sarif'
